syntax = "proto3";

package client;

message Client {
  string id  = 1; 
  string user_id = 2;
  string secret = 4;
  string name = 5;
  string description = 6;
  string application_type = 7;
  string token_endpoint_auth_method = 8;
  string scope = 9;
  repeated string contacts = 10;
  repeated string grant_type = 11;
  repeated string response_type = 12;
  repeated string redirect_uri = 13;
  string logo_uri = 14;
  string client_uri = 15;
  string policy_uri = 16;
  string tos_uri = 17;
  string created_at = 18;
  string updated_at = 19;
}

message ClientList {
  repeated Client client = 1;
}
